--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
 <head>
     <title> Badshah Safety Services </title>
     <script src="./js/index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.full.min.js"></script>
+
+
+
+
 </head>
 
 <body>
     <h1>hello murtaza</h1>
+    <form enctype="multipart/form-data">
+        <input id="upload" type=file name="files[]">
+    </form>
+
+    <div id="xlx_json"></div>
+
+    <img src="https://drive.google.com/uc?id=1Sq30o2-ztarZ78yuaeFI7OJqMKiuQycp" height="200" width="300">
+
 </body>
 
 </html>
